initial change of dependencies to fabric and mc 1.21.5